[package]
name = "mlir-sys"
version = "0.1.4"
authors = ["McCoy R. Becker, Yota Toyama"]
edition = "2021"
description = "Rust bindings to the MLIR C API."
repository = "https://github.com/femtomc/mlir-sys"
readme = "README.md"
links = "MLIR"
license-file = "LICENSE"

[build-dependencies]
bindgen = "0.62.0"
